fix: markdown table dark mode style

--- a/source/css/color-scheme.css
+++ b/source/css/color-scheme.css
@@ -14,6 +14,11 @@
     --color-block-md-quote: #555555;
     --color-divider-md-border: #5858581a;
     --bg-content-search: rgb(255 255 255 / 60%);
+    --bg-block-md-pre: #e6e6e6;
+    --color-text-md-pre: #555555;
+    --bg-block-md-table: #ffffff;
+    --bg-block-md-table-2: #f6f8fa;
+    --color-border-md-table: #dfe2e5;
 }
 
 /* dark scheme */
@@ -32,4 +37,9 @@
     --color-block-md-quote: #abb9cf;
     --color-divider-md-border: #ffffff4f;
     --bg-content-search: rgb(59 66 82 / 60%);
+    --bg-block-md-pre: #3a4252;
+    --color-text-md-pre: #abb9cf;
+    --bg-block-md-table: #2E3440;
+    --bg-block-md-table-2: #313744;
+    --color-border-md-table: #4c566a;
 }
